[gd_scene load_steps=12 format=2]

[ext_resource path="res://towers/tower1/scripts/FireAnim.gd" type="Script" id=1]
[ext_resource path="res://fx/light2.png" type="Texture" id=2]
[ext_resource path="res://fx/smoke.png" type="Texture" id=3]


[sub_resource type="Gradient" id=1]
offsets = PoolRealArray( 0.145729, 0.421525, 0.58296, 1 )
colors = PoolColorArray( 1, 1, 1, 1, 1, 0.960784, 0, 0.462745, 1, 0.225586, 0, 0.317647, 0.996078, 0.980392, 0.960784, 0 )

[sub_resource type="GradientTexture" id=2]
gradient = SubResource( 1 )

[sub_resource type="Curve" id=3]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0.450853 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=4]
curve = SubResource( 3 )

[sub_resource type="ParticlesMaterial" id=5]
resource_local_to_scene = true
emission_shape = 1
emission_sphere_radius = 1.0
spread = 60.0
gravity = Vector3( 98, 0, 0 )
initial_velocity = 5.0
linear_accel = 20.0
scale_random = 0.2
scale_curve = SubResource( 4 )
color_ramp = SubResource( 2 )

[sub_resource type="Gradient" id=6]
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=7]
gradient = SubResource( 6 )

[sub_resource type="ParticlesMaterial" id=8]
emission_shape = 1
emission_sphere_radius = 10.0
flag_disable_z = true
spread = 180.0
gravity = Vector3( 98, 98, 0 )
initial_velocity = 50.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
radial_accel = 60.0
radial_accel_random = 0.5
tangential_accel = 30.0
tangential_accel_random = 0.5
color_ramp = SubResource( 7 )

[node name="ShootFx" type="Node2D"]
rotation = 3.14159
script = ExtResource( 1 )

[node name="FireLight" type="Sprite" parent="."]
modulate = Color( 1, 1, 0.8, 0.4 )
scale = Vector2( 3, 3 )
texture = ExtResource( 2 )

[node name="Particles2D" type="Particles2D" parent="."]
scale = Vector2( 10, 10 )
emitting = false
amount = 25
lifetime = 0.3
one_shot = true
speed_scale = 2.0
explosiveness = 1.0
process_material = SubResource( 5 )

[node name="Particles2D2" type="Particles2D" parent="."]
modulate = Color( 1, 1, 1, 0.666667 )
scale = Vector2( 0.5, 0.5 )
emitting = false
amount = 15
lifetime = 1.2
one_shot = true
explosiveness = 0.8
process_material = SubResource( 8 )
texture = ExtResource( 3 )

[node name="Timer" type="Timer" parent="."]
wait_time = 1.2
one_shot = true
autostart = true

[node name="Tween" type="Tween" parent="."]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
